--- a/css/style.css
+++ b/css/style.css
@@ -579,3 +579,63 @@ border-color: #28a745;
 .shows p{
 	padding-right: 200px;
 }
+
+
+.modal2 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content2 {
+    background-color:saddlebrown;
+    margin: auto;
+    padding: 20px;
+    padding-top: 20px;
+    height: 400px;
+    opacity: 0.9;
+    overflow: auto;
+    border: 1px solid #888;
+    width: 50%;
+    border-radius: 20px;
+}
+
+/* The Close Button */
+
+
+.close1 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close1:hover,
+.close1:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/* .new_entry{
+    width: 650px;
+    height: 430px;
+    background: #514b3f;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 50px 30px;
+    border-radius: 5px;
+} */
