--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,7 @@ border-color: #dc3545;
 }
 
 #myBtn1{
+
 	float: center;
 	padding: 14px 16px;
 		opacity: 0.9;
@@ -574,8 +575,32 @@ background-color: #28a745;
 border-color: #28a745;
 
 }
+#myBtn2{
+	float: center;
+	padding: 14px 16px;
+		opacity: 0.9;
+	border: none;
+	color: #fff;
+	font-size: 16px;
+		background-color: #0d47a1;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		padding-left: 10px;
+		padding-right:10px;
+	
+}
+#submit{
+	float: center;
+	padding: 14px 16px;
+		opacity: 0.9;
+	border: none;
+	color: #fff;
+	font-size: 16px;
+width: 100px;
+background-color: #28a745;
 
-
+border-color: #28a745;
+}
 .shows p{
 	padding-right: 200px;
 }
