--- a/css/style.css
+++ b/css/style.css
@@ -1,546 +1,332 @@
-body{
-	margin: 0;
-font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-font-size: 1rem;
-font-weight: 400;
-line-height: 1.5;
-text-align: left;
-background-image: url(../img/diary.jpg);
-background-attachment: fixed;
-background-repeat: no-repeat;
-background-size: 1500px 670px;
-
+body {
+  margin:0;font-family:Arial
+  font-family: MyCustomFont !important;
 }
 
-
-/*
- Navbar styles
- background-repeat: no-repeat, repeat;
-*/
-
-.top{
-	background-color: #3F729B;
-	overflow:  hidden;
-
+.top {
+  overflow: hidden;
+  background-color: #0099CC;
 }
-
+.top img{
+  height: 70px;
+  padding: 5px 50px;
+  width: 100px;
+}
 .top a {
-	float: left;
-	color: #ffffff;
-	text-decoration: none;
-	font-size: 20px;
-	text-align: center;
-	padding: 14px 16px;
+  float: right;
+  display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 25px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-
-.top a:hover {
-	background-color:#59698d;
-	color: #ffffff;
-}
-
-.top-right{
-	float: right;
-}
-.account{
-	background-color: #3F729B;
-	color: #ffffff;
-	padding: 16px;
-	font-size: 24px;
-	padding-left: 50px;
-}
-
-.account-content{
-	display: none;
-	background-color: #3F729B;
-	position: absolute;
-	min-width: 200px;
-	box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-	z-index: 1;
-}
-.account-content a {
-	color: #ffffff;
-	padding: 12px 16px;
-	text-decoration: none;
-}
-
-.account-content a:hover {
-background-color:#59698d;
-}
-
-.dropdown:hover .account-content {
-	display: block;
-}
-
-.dropdown:hover .account{
-background-color:#59698d;
-}
-
-
-/* Register form  styles */
+@media screen and (max-width: 100px) {
+  .top.responsive {position: relative;}
+  .top.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .top.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+} 
 
 #register{
-	background: rgba(0, 0, 0, 0.55);
-	padding: 5px;
-	padding-left: 400px;
-	padding-right: 400px;
-	color: #ffffff;
-	font-size: 20px
+  padding-top: 20px;
 }
 #register a{
-	font-size: 20px;
-	color: #ffffff;
-	text-decoration: none;
-	background-color: #0d47a1;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+  font-size: 15px;
 }
-#login{
-		background: rgba(0, 0, 0, 0.55);
-
-	padding: 5px;
-	padding-left: 400px;
-	padding-right: 400px;
-	color: #ffffff;
-font-size: 20px;
+#register button{
+  background-color: #33b5e5;
+  color: #ffffff;
+  font-size: 20px;
+  opacity: 0.9;
+  cursor: pointer;
+  border: none;
 }
-
-input[type=text], input[type=password]{
-	width: 500px;
-	padding: 10px;
-	margin: 5px 0 22px 0;
-	
+#login-form button{
+  background-color: #33b5e5;
+  color: #ffffff;
+  font-size: 20px;
+  opacity: 0.9;
+  cursor: pointer;
+  border: none;
 }
-
-#login a{
-	font-size: 20px;
-	color: #ffffff;
-	text-decoration: none;
-	background-color: #0d47a1;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+#login-form{
+   padding-top: 20px;
 }
-.register_button{
-	background-color: #0d47a1;
-	color: #ffffff;
-	padding-top: 16px 20px;
-	margin: 8px;
-	width: 150px;
-	font-size: 20px;
-	opacity: 0.9;
-	cursor: pointer;
-	padding-left: 20px;
-	padding-right: 20px;
-	border: none;
+#login-form a{
+  font-size: 15px;
+}
+#register-form  button{
+  background-color: #33b5e5;
+  color: #ffffff;
+  font-size: 20px;
+  opacity: 0.9;
+  cursor: pointer;
+  border: none;
+}
+#register-form {
+ padding-top: 20px;
 }
 
 
+form {
+  margin:0 auto;
+  width:300px
+}
+input {
+  margin-bottom:16px;
+  padding:15px;
+  width: 100%;
+  border:1px solid #CCC
+}
 button {
-	float: center;
-	padding: 14px 16px;
-		opacity: 0.9;
-	border: none;
+  padding:10px
 }
 
-/* home backgraund */
+label {
+  cursor:pointer
+}
+#form-switch {
+  display:none
+}
+#register-form {
+  display:none
+}
+#form-switch:checked~#register-form {
+  display:block
+}
+#form-switch:checked~#login-form {
+  display:none
+} 
 
-.homemusa{
-background: rgba(0, 0, 0, 0.55);
-
-	height: 550px;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-	padding-top: 20px;
+.dropdown {
+    float: right;
+    padding-right: 30px;
+}
+.dropdown .dropbtn {
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 13px;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.dropdown-content a:hover {
+    background-color: #3F729B;
+    color: #ffffff;
+        padding: 3px 20px;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
-.homemusa-text{
-	text-align: center;
-	left: 50%;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 30px;
-}
-
-.homemusa-text h1{
-	font-size: 60px;
-
-}
-.homemusa-text p{
-	font-size: 24px;
-}
-
-.homemusa-text a{
-  background-color: dodgerblue;
-	color: #ffffff;
-	margin: 20px;
-	width: 150px;
-	font-size: 30px;
-	font-weight: 100px;
-	opacity: 0.9;
-	border: none;
-	text-decoration: none;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 8px;
-	padding-right: 8px; 
-
-}
-
-
-.footer {
-	padding-top: 10px;
-  padding-bottom: 10px;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: #1C2331;
-   color: white;
-   text-align: center;
-}
-
-.footer a{
-	font-size: 16px;
-	color: #fff;
-	text-decoration: none;
-}
-
-/*---- Add Diary Style-------*/
-.row{
-	background: rgba(0, 0, 0, 0.55);
-	color: #ffffff;
-	display: flex;
-}
-
-.column{
-	flex: 50%;
-	padding: 10px;
-	width: 50%;
-	padding-top: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-input[type=date], input[type=time]{
-	width: 150px;
-	padding: 10px;
-	margin: 5px 0 22px 0;
-	
-}
-.data b{
-	font-size: 20px;
-
-
-}
-
-.column4{
-	flex: 50%;
-	padding: 10px;
-	width: 80%;
-	padding-top: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-.column3{
-	flex: 20%;
-	padding: 10px;
-	width: 50%;
-	padding-top: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-.data{
-background: rgba(0, 0, 0, 0.55);
-padding: 12px;
-
+.contianer{
+padding-left: 5em;
+padding-right: 5em;
 }
 
 
-.book{
-cursor: pointer;
-background: rgba(0, 0, 0, 0.55);
-padding: 12px;
-border: 12px;
-border: 1px solid rgba(255, 255, 255, 0.55);
-border-radius: 5px;
-margin-bottom: 10px;
+.new_delivery{
+    width: 420px;
+    border: 0px solid #F36;
+    margin-left: 33px;
+    margin-top: 50px;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.9;
+    padding: 30px;
+        padding-bottom: 30px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    padding-bottom: 9px;
+    padding-top: 0px;
+    margin-bottom: 98px;
+    top: 90px;
+    left: 30px;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2),0 -1px 0px rgba(0,0,0,0.02);
+    position: fixed;
+    z-index: 400;
+    padding-right: 50px;
+    padding-bottom: 2em;
+
+}
+.new_delivery button{
+    background-color: #1782C5;
+    padding: 9px !important;
+    color: #fff;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    width: 330px;
+    margin-top: 0px;
+    font-size: 20px;
+    transition-delay: 1s;
+    -moz-transition: all 1s;
+    -webkit-transition: all 1s;
+    transition: all 1s;
+}
+
+@media screen and (max-width: 100px) {
+  .new_delivery {position: relative;}
+  .new_delivery input{
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .new_delivery {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+} 
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
 
 
-.book a{
-	color: #ffffff;
-	font-size: 40px;
-	text-decoration: none;
-
-}
-.book:hover{
-	background:rgba(63, 81, 181, 0.7);
-
-}
-.book-update:hover{
-	background:rgba(63, 81, 181, 0.7);
-
-
-}
-td, th{
-	padding: 8px;
-	text-align: left;
-}
-table{
-	width: 500px;
+#myInput {
+   
+    background-position: 10px 12px; 
+    background-repeat: no-repeat;
+    width: 94%; 
+    font-size: 16px; 
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px; 
 }
 
+#NewTable {
+  
+    width: 100%; 
+    border: 1px solid #ddd; 
+    font-size: 18px;
+}
 
-/* --------------Updating style-----------*/
-#book-update{
-cursor: pointer;
-background: rgba(0, 0, 0, 0.55);
-padding: 12px;
-border: 12px;
-border: 1px solid rgba(255, 255, 255, 0.55);
-border-radius: 5px;
-margin-bottom: 10px;
-padding-left: 50px;
-padding-right: 50px;
-color: #ffffff;
+#NewTable th, #NewTable td {
+    text-align: left;
+    padding: 12px; 
+}
+#NewTable tr {
+    border-bottom: 1px solid #ddd;
+}
+
+#NewTable tr.header, #NewTable tr:hover {
+    background-color: #f1f1f1;
+    color: #0099CC;
+}
+.contianer h1{
+    font-size: 30 px;
+    padding-bottom: 0px;
+    border-bottom: 1px solid #ccc;
+    color: #999;
+    padding-top: 15px;
+    margin-bottom: 30px;
+}
+
+.contianer a{
+    font-size: 30px;
+    padding-bottom: 0px;
+    border-bottom: 1px solid #ccc;
+    color: #999;
+    padding-top: 15px;
+   margin-bottom: 30px;
+  padding-left: 900px;
+  text-decoration: none;
+}
+
+#mud{
+  background-color: #0d47a1;
+  color: #ffffff;
 font-size: 20px;
 }
 
-#book-update1{
-	cursor: pointer;
-	background: rgba(0, 0, 0, 0.55);
-	padding: 12px;
-	border: 12px;
-	border: 1px solid rgba(255, 255, 255, 0.55);
-	border-radius: 5px;
-	margin-bottom: 10px;
-	padding-left: 50px;
-	padding-right: 50px;
-	color: #ffffff;
-	font-size: 20px;
-	}
-
-.book-container{
-	padding-left: 50px;
-padding-right: 50px;
-
-}
-
-.book-container button{
-	float: right;
-	background-color: #FF8800;
-	color: #ffffff;
-	font-size: 20px;
-	opacity: 0.9;
-	cursor: pointer;
-	border: none;
-}
-
-.book-container table{
-		width: 900px;
-
-}
-
-
-
-.row1{
-	background: rgba(0, 0, 0, 0.55);
-	color: #ffffff;
-	display: flex;
-}
-
-.column1{
-	flex: 50%;
-	padding: 10px;
-	width: 50%;
-	padding-top: 20px;
-	padding-left: 100px;
-	padding-right: 100px;
-}
-
-#pro{
-cursor: pointer;
-background: rgba(0, 0, 0, 0.55);
-padding: 12px;
-border: 12px;
-border-radius: 5px;
-margin-bottom: 10px;
-padding-left: 50px;	
-
-}
-#pro p{
-	font-size: 20px;
-
-}
-#pro b{
-	background-color: #0d47a1;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right:10px;
-}
-.postbtn{
-	background-color: #0d47a1;
-	color: #ffffff;
-	font-size: 20px;
-}
-
-th{
-	font-size: 24px;
-	width: 200px;
-	padding-left: 30px;
-
-}
-td{
-		padding-left: 30px;
-			width: 200px;
-
-
-}
-
-.book1{
-	color: #ffffff;
-cursor: pointer;
-background:rgba(63, 81, 181, 0.7);
-padding: 12px;
-border: 12px;
-border: 1px solid rgba(255, 255, 255, 0.55);
-border-radius: 5px;
-margin-bottom: 10px;
-}
-.book2{
-	color: #ffffff;
-cursor: pointer;
-background:rgba(63, 81, 181, 0.7);
-padding: 12px;
-border: 12px;
-padding-left: 35px;
-border: 1px solid rgba(255, 255, 255, 0.55);
-border-radius: 5px;
-margin-bottom: 10px;
+.top h2{
+  font-size: 20px;
 }
 
 
 .modal {
-    display: none;  /*Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
-}
-.modal-content {
-    border-radius: 10px; 
-	background: rgba(0, 0, 0, 0.55);
-    opacity: 0.8;
-    margin: 10% auto; 
-    padding: 20px;
-    border: 1px solid #888;
-    height: auto;
-	width: auto; 
-	color: #fff;
-}
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-.close:hover,
-.close:focus {
-    color: rgb(138, 19, 19);
-    text-decoration: none;
-    cursor: pointer;
-}
-.modalText{
-    color: black;
-    font-family: sans-serif;
-    font-size: 19px;
-}
-.tableform{
-font-family: sans-serif;
-font-size:16px;     
-margin-top:10%;
-margin-bottom:10%;
-opacity:0.8;
-margin-left:25%;
-margin-right:25%;
-background-color:white;
-padding: 10px 10px 10px 10px;
-border-radius:10px;
-
-align-content: stretch;
-}
-table{
-    border-spacing:15px;
-    
-}
-.view:hover,
-.view:focus {
-    color: rgb(138, 19, 19);
-    text-decoration: none;
-    cursor: pointer;
-}
-.modal-modify{
     display: none;
-}
-#regstatus, #id{
-    color:red;
-}
-#success{
-    color:rgb(5, 221, 77);
-}
-h3, h5{
-    display: inline;
-}
-.totals{
-    font-size:16px;     
-    margin-top:5%;
-    opacity:0.8;
-    margin-left:5%;
-    margin-right:5%;
-    margin-bottom:-8%;
-    text-align:center;
-    background-color:white;
-    padding: 10px 10px 10px 10px;
-    border-radius:10px;
-}
-
-
-.modal2 {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
 }
 
-.modal-content2 {
-    background-color:saddlebrown;
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    padding-top: 20px;
-    height: 400px;
-    opacity: 0.9;
-    overflow: auto;
     border: 1px solid #888;
-    width: 50%;
-    border-radius: 20px;
+    width: 80%;
+}
+.modal-content{
+font-size: 30 px;
+    padding-bottom: 0px;
+    border-bottom: 1px solid #ccc;
+    color: #999;
+    padding-top: 15px;
+    margin-bottom: 30px;
 }
 
+.modal-content button{
+    background-color: #33b5e5;
+  color: #ffffff;
+  font-size: 20px;
+  opacity: 0.9;
+  cursor: pointer;
+  border: none;
+
+}
 /* The Close Button */
 .close {
     color: #aaaaaa;
@@ -556,148 +342,134 @@ h3, h5{
     cursor: pointer;
 }
 
-.close1 {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close1:hover,
-.close1:focus {
-    color: #000;
-    text-decoration: none;
-cursor: pointer;
-}
 
 
-#myBtn{
-	float: center;
-	padding: 14px 16px;
-		opacity: 0.9;
-	border: none;
-	color: #fff;
-	font-size: 16px;
-background-color: #ffc107;
-border-color: #ffc107;
+.card {
+    padding-top: 3em;
 
-}
-
-
-#delete{
-	float: center;
-	padding: 14px 16px;
-		opacity: 0.9;
-	border: none;
-	color: #fff;
-	font-size: 16px;
-
-background-color: #dc3545;
-
-border-color: #dc3545;
-
-}
-
-#myBtn1{
-
-	float: center;
-	padding: 14px 16px;
-		opacity: 0.9;
-	border: none;
-	color: #fff;
-	font-size: 16px;
-
-background-color: #28a745;
-
-border-color: #28a745;
-
-}
-#myBtn2{
-	float: center;
-	padding: 14px 16px;
-		opacity: 0.9;
-	border: none;
-	color: #fff;
-	font-size: 16px;
-		background-color: #0d47a1;
-		padding-top: 10px;
-		padding-bottom: 10px;
-		padding-left: 10px;
-		padding-right:10px;
-	
-}
-#submit{
-	float: center;
-	padding: 14px 16px;
-		opacity: 0.9;
-	border: none;
-	color: #fff;
-	font-size: 16px;
-width: 100px;
-background-color: #28a745;
-
-border-color: #28a745;
-}
-.shows p{
-	padding-right: 200px;
-}
-
-
-.modal2 {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-.modal-content2 {
-    background-color:saddlebrown;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
     margin: auto;
-    padding: 20px;
-    padding-top: 20px;
-    height: 400px;
-    opacity: 0.9;
-    overflow: auto;
-    border: 1px solid #888;
-    width: 50%;
-    border-radius: 20px;
+    text-align: center;
 }
 
-/* The Close Button */
-
-
-.close1 {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.title {
+    color: grey;
+    font-size: 18px;
 }
 
-.close1:hover,
-.close1:focus {
-    color: #000;
-    text-decoration: none;
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #0099CC;
+    text-align: center;
     cursor: pointer;
+width: 110%;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+button:hover, a:hover {
+    opacity: 0.7;
+}
+
+.new_delivery p{
+
+font-size: 20px;
+}
+
+.sidenav {
+    height: 100%;
+    width: 240px;
+    position: fixed;
+    z-index: 1;
+    top: 80px;
+    left: 0;
+    background-color: #3F729B;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #ffffff;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.main {
+    margin-left: 260px; 
+    font-size: 28px; 
+    padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
 
 
-/* .new_entry{
-    width: 650px;
-    height: 430px;
-    background: #514b3f;
+
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+      
+}
+.col-md-4{
+    -ms-flex: 0 0 33.333333%;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+    position: relative;
+width: 100%;
+min-height: 1px;
+padding-right: 15px;
+padding-left: 15px;
+    }
+
+.color-block {
+    text-align: center;
+    height: 130px;
     color: #fff;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    padding: 50px 30px;
-    border-radius: 5px;
-} */
+    padding: 40px;
+   background-color: #ff3547 !important;
+}
+
+.color-block1 {
+    text-align: center;
+    height: 130px;
+    color: #fff;
+    padding: 40px;
+ background-color: #fb3 !important;
+}
+
+.color-block2 {
+    text-align: center;
+    height: 130px;
+    color: #fff;
+    padding: 40px;
+   background-color: #00c851 !important;
+}
+
+.color-block3 {
+    text-align: center;
+    height: 130px;
+    color: #fff;
+    padding: 40px;
+    background-color: #33b5e5 !important;
+}
