--- a/css/style.css
+++ b/css/style.css
@@ -473,3 +473,13 @@ min-height: 1px;
     padding: 40px;
     background-color: #33b5e5 !important;
 }
+
+.outer {
+    max-width: 30rem;
+    margin: 0px auto;
+    border: 1px solid #D8DFE6;
+    border-radius: 4px;
+    margin: 2rem auto;
+    padding: 2rem;
+    font-family: "Helvetica Nueu", "Helvetica", "Arial", "sans-serif";
+}
