--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -174,6 +174,32 @@ padding-right: 5em;
     padding-bottom: 2em;
 
 }
+
+.new_delivery1{
+    width: 520px;
+    border: 0px solid #F36;
+    margin-left: 50px;
+    /* margin-top: 50px; */
+    margin-bottom: 100px;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.9;
+    padding: 30px;
+    padding-bottom: 30px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    padding-bottom: 9px;
+    padding-top: 0px;
+    margin-bottom: 98px;
+    top: 55px;
+    left: 30px;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2),0 -1px 0px rgba(0,0,0,0.02);
+    position: fixed;
+    padding-right: 50px;
+    padding-bottom: 7em;
+    height: 500px;
+
+}
+
 .new_delivery button{
     background-color: #1782C5;
     padding: 9px !important;
@@ -341,6 +367,64 @@ font-size: 30 px;
     text-decoration: none;
     cursor: pointer;
 }
+
+
+
+.modal1 {
+    display: none;
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content */
+.modal-content1 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+.modal-content1{
+font-size: 30 px;
+    padding-bottom: 0px;
+    border-bottom: 1px solid #ccc;
+    color: #999;
+    padding-top: 15px;
+    margin-bottom: 30px;
+}
+
+.modal-content1 button{
+    background-color: #33b5e5;
+  color: #ffffff;
+  font-size: 20px;
+  opacity: 0.9;
+  cursor: pointer;
+  border: none;
+
+}
+/* The Close Button */
+.close1 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close1:hover,
+.close1:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 
 
