--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -652,6 +652,63 @@ font-size: 30 px;
 
 
 
+.modal8 {
+    display: none;
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content */
+.modal-content8 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+.modal-content8{
+font-size: 30 px;
+    padding-bottom: 0px;
+    border-bottom: 1px solid #ccc;
+    color: #999;
+    padding-top: 15px;
+    margin-bottom: 30px;
+}
+
+.modal-content8 button{
+    background-color: #33b5e5;
+  color: #ffffff;
+  font-size: 20px;
+  opacity: 0.9;
+  cursor: pointer;
+  border: none;
+
+}
+/* The Close Button */
+.close8 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
 
 .card {
     padding-top: 3em;
