--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -332,7 +332,7 @@ font-size: 20px;
 }
 
 
-.modal {
+/* .modal {
     display: none;
     position: fixed; 
     z-index: 1; 
@@ -344,7 +344,7 @@ font-size: 20px;
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4);
-}
+} */
 
 /* Modal Content */
 .modal-content {
@@ -1032,9 +1032,27 @@ table.dataTable thead .sorting_desc_disabled:before {
 
 }
 
-
 .card1 h1{
   color:#fd7e14;
   font-weight: bold;
   font-size: 1.5em;
+}
+
+.systel p{
+  color:#ffbb33;
+  padding-top: 1em;
+  font-size: 1.1em;
+  font-weight: bold;
+ 
+}
+
+.systel h2{
+  font-weight: bold;
+  color: #33b5e5;
+  font-size: 1.5em;
+  padding-top: 1em;
+}
+.tabx tr{
+  color: #33b5e5;
+  font-size: 1em;
 }
