--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -366,7 +366,7 @@ font-size: 30 px;
 .modal-content button{
     background-color: #33b5e5;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 1em;;
   opacity: 0.9;
   cursor: pointer;
   border: none;
