--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -8,7 +8,7 @@ body {
   background-color: #0099CC;
 }
 .navbar-brand img{
-  height: 65px;
+  height: 60px;
   padding: 5px 10px;
 }
 .top a {
@@ -1055,4 +1055,98 @@ table.dataTable thead .sorting_desc_disabled:before {
 .tabx tr{
   color: #33b5e5;
   font-size: 1em;
+}
+
+
+#myCarousel .carousel-item .mask {
+  position: absolute;
+  top: 0;
+  left:0;
+  height:100%;
+  width: 100%;
+  background-attachment: fixed;
+}
+#myCarousel h4{
+font-size:2.2em;
+margin-bottom:15px;
+color:#FFF;
+line-height:100%;
+letter-spacing:0.5px;
+font-weight:600;
+}
+#myCarousel p{
+font-size:18px;
+margin-bottom:15px;
+color:#d5d5d5;
+}
+
+
+
+#myCarousel .carousel-item h4{-webkit-animation-name:fadeInLeft; animation-name:fadeInLeft;} 
+#myCarousel .carousel-item p{-webkit-animation-name:slideInRight; animation-name:slideInRight;} 
+#myCarousel .carousel-item a{-webkit-animation-name:fadeInUp; animation-name:fadeInUp;}
+#myCarousel .carousel-item .mask img{-webkit-animation-name:slideInRight; animation-name:slideInRight; display:block; height:auto; max-width:100%;}
+#myCarousel h4, #myCarousel p, #myCarousel a, #myCarousel .carousel-item .mask img{-webkit-animation-duration: 1s;
+    animation-duration: 1.2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+#myCarousel .container {max-width: 1430px;  }
+#myCarousel .carousel-item{height:100%; min-height:550px; }
+#myCarousel{position:relative; z-index:1; background:url(/UI/img/j2j.jpg) center center no-repeat; background-size:cover; }
+
+
+
+.carousel-item {
+    position: relative;
+    display: none;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    transition: -webkit-transform .6s ease;
+    transition: transform .3s ease;
+    transition: transform .3s ease,-webkit-transform .6s ease;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000px;
+    perspective: 1000px;
+}
+
+.works{
+
+  padding: 3em;
+  text-align: center;
+
+}
+
+.works i{
+
+  color: #FF8800;
+  font-size: 5em;
+  padding: .5em;
+}
+
+.works h1{
+  color: #00C851;
+  font-weight: 600;
+  font-size: 2em;
+}
+
+.col-2 {
+  -ms-flex: 0 0 16.666667%;
+  flex: 0 0 16.666667%;
+  max-width: 16.666667%;
+}
+
+#myCarousel a{
+
+  color: #00C851;
+  font-weight: 500;
+  font-size: 1em;
+}
+
+.works p{
+  font-size: 17px;
+  color: #1C2331;
 }
