--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1098,6 +1098,142 @@ color:#d5d5d5;
   color:  #fd7e14;
 
 }
+/* @media screen and (min-width: 280px) {
+  .tabl td {width: 20px;}
+  .tabl th {margin-left: 150px;}
+}
+
+@media screen and (max-height: 450px) {
+  .tabl td {width: 15px;}
+  /* .sidenav a {font-size: 18px;} */
+/* }  */
+
+/* @media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		position: absolute;
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	} */
+	
+	/*
+	Label the data
+	*/
+	/* td:nth-of-type(1):before { content: "First Name"; }
+	td:nth-of-type(2):before { content: "Last Name"; }
+	td:nth-of-type(3):before { content: "Job Title"; }
+	td:nth-of-type(4):before { content: "Favorite Color"; }
+	td:nth-of-type(5):before { content: "Wars of Trek?"; }
+	td:nth-of-type(6):before { content: "Secret Alias"; }
+	td:nth-of-type(7):before { content: "Date of Birth"; }
+	td:nth-of-type(8):before { content: "Dream Vacation City"; }
+	td:nth-of-type(9):before { content: "GPA"; }
+	td:nth-of-type(10):before { content: "Arbitrary Data"; } */
+/* }            */
+
+@media screen and (max-width: 983px) {
+  table {
+    display:block;
+    width:100%;
+  }
+  .table thead {
+    display:none;
+    color: #fd7e14;
+  }
+
+  .td{
+    color: #fd7e14;
+  }
+  .table tbody {
+    display:block;
+  }
+  .table tr {
+    background: white;
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items:center;
+  }  
+  .table tr + tr {
+    margin-top:1em;
+  }
+  .table tr .th {
+    background: #eee;
+    display:block;
+    width:100%;
+    flex:1 auto;
+    font-weight:bold;
+  }
+  .table tr td.th{
+    padding:0.5rem;
+  }
+  .table tr td.th:after {
+    content: attr(data-heading);
+    color: #999;
+    padding-left:0.5em;
+    font-weight:normal;
+    position:inherit;
+    display:inline;
+    top:auto;
+    left:auto;
+    right:auto;
+    bottom:auto;
+  }
+  .table tr td {
+    flex:1 0;
+    position:relative;
+    padding-bottom: 17.5pt;
+  }
+  .table tr td:after {
+    content: attr(data-heading);
+    color: #999;
+    font-weight:normal;
+    display: block;
+    width: 100%;
+    position: absolute;
+    bottom: 5pt;
+    left: 0;
+    font-size: 10pt;
+    line-height: 1.2;
+  }
+
+  td:nth-of-type(1):before { content: "Reciept  "; }
+	td:nth-of-type(2):before { content: "CarNumber  "; }
+	td:nth-of-type(3):before { content: "From  "; }
+	td:nth-of-type(4):before { content: "To  "; }
+	td:nth-of-type(5):before { content: "Price  "; }
+	td:nth-of-type(6):before { content: "Quantity  "; }
+	td:nth-of-type(7):before { content: "Amount  "; }
+	td:nth-of-type(8):before { content: "Payment  "; }
+  content{
+    color:yellow;
+  }
+
+}        
 
 
 
